Timer Image Animation

--- a/JsTimer.html
+++ b/JsTimer.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS STOPWATCH</title>
-    <link rel="stylesheet" type="text/css" href="/JavaScriptTimer/JsTimer.css">
+    <link rel="stylesheet" type="text/css" href="/JsTimer.css">
+    <link rel="stylesheet" type="text/css" href="/Spiral.css">
 </head>
 <body>
     <div class="container">
-        <img src="/JavaScriptTimer/stopwatch 2.png" width="300px"><br>
+        <div class='spiralContainer'><div class='spiral'></div></div>
+        <!-- <img src="/stopwatch 2.png" width="300px"><br> -->
         
         <h2>Bright's First Built StopWatch </h2>
 
@@ -20,7 +22,7 @@
     </div>
 
 
-    <script src="/JavaScriptTimer/JsTimer.js"></script>
+    <script src="./JsTimer.js"></script>
 
 </body>
 </html>
